--- a/pom.xml
+++ b/pom.xml
@@ -50,19 +50,23 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.aspectj</groupId>-->
-<!--            <artifactId>aspectjrt</artifactId>-->
-<!--            <version>1.9.2</version>-->
-<!--        </dependency>-->
 
         <!-- spring aop -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.45</version>
+        </dependency>
     </dependencies>
-
+    <!--        <dependency>-->
+    <!--            <groupId>org.aspectj</groupId>-->
+    <!--            <artifactId>aspectjrt</artifactId>-->
+    <!--            <version>1.9.2</version>-->
+    <!--        </dependency>-->
     <build>
         <plugins>
             <plugin>
